profile, layout issue fixed

--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,8 @@
 }
 
 .App {
-  flex: 1;
   position: relative;
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
 }
