--- a/src/screens/profile/ProfileScreen.css
+++ b/src/screens/profile/ProfileScreen.css
@@ -1,7 +1,6 @@
 .ProfileScreen {
   flex: 1;
-  height: 100%;
+  display: flex;
+  flex-direction: column;
   background-color: #f2f2f2;
-  align-items: center;
-  justify-content: center;
 }
